fixed spacing

--- a/view/css/style.css
+++ b/view/css/style.css
@@ -10,7 +10,6 @@ body {
 	font-family: "Poppins", sans-serif;
 	color: white;
 	background: rgb(43, 43, 43);
-	margin: 0 0 125px 0; /* bottom px changes space from end of content to start of footer */
 }
 
 body::-webkit-scrollbar {
@@ -31,10 +30,15 @@ body::-webkit-scrollbar-thumb:hover {
 	border: 3px solid rgb(43, 43, 43);
 }
 
+content {
+	padding: 0 0 6rem 0; /* match bottom to footer height */
+}
+
 footer {
 	position: absolute;
-	bottom: 1em; /* space from bottom */
 	width: 100%;
+	height: 6rem; /* space from bottom */
+	bottom: 0;
 }
 
 a {
